Fixed another spacing issue, and added the README.md file.

--- a/style.css
+++ b/style.css
@@ -114,7 +114,7 @@ p {
     line-height: 140%;
     letter-spacing: 0.2px;
     color: var(--cl-slate-500);
-    margin: var(--sp-200) var(--sp-200) var(--sp-250);
+    margin: var(--sp-200);
 }
 
 .component {
